--- a/src/CanvasManifest.json
+++ b/src/CanvasManifest.json
@@ -110,11 +110,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "67408087-7688-4e5d-9dda-5349ae5ab542",
-    "Id": "05318c53-30b0-4f1a-bd81-fc3d8432aaeb",
+    "Id": "b9f17a2b-bbe6-4e42-ad27-43acb3175901",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "SCRUMBAN GAME - copy",
+    "Name": "SCRUMBAN%2BGAME%2B-%2Bcopy.msapp",
     "OriginatingVersion": "1.334",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
